--- a/Evaluation Manager LA/Evaluation Manager.csproj
+++ b/Evaluation Manager LA/Evaluation Manager.csproj
@@ -69,12 +69,15 @@
       <DependentUpon>FrmStudents.cs</DependentUpon>
     </Compile>
     <Compile Include="model\Activity.cs" />
+    <Compile Include="model\Evaluation.cs" />
     <Compile Include="model\Person.cs" />
     <Compile Include="model\Student.cs" />
     <Compile Include="model\Teacher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ActivityRepository.cs" />
+    <Compile Include="Repositories\EvaluationRepository.cs" />
+    <Compile Include="Repositories\TeacherRepository.cs" />
     <Compile Include="Repositories\StudentRepository.cs" />
     <EmbeddedResource Include="FrmEvaluation.resx">
       <DependentUpon>FrmEvaluation.cs</DependentUpon>
